started to work on user changes
